# uw_dynamics

./: CMakeLists.txt  README.md  package.xml  setup.py
include/uw_dyn/: underwater_dynamics.h
src/: underwater_dynamics.cpp
